js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/main/test.0.kt
fun test(): Int {
    try {
        return Klass().getSomething()
    } catch (e: Error) {
        return 1
    }
}
